<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="expense"
            type="rhcloud.com.financialcontrol.javabean.Expense" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:inputType="text"
                    android:text="@={expense.description}"
                    android:layout_toRightOf="@+id/tvDescription"
                    android:layout_toEndOf="@+id/tvDescription" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Description:"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp">


                <EditText
                    android:id="@+id/etValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@={expense.value}"
                    android:layout_toRightOf="@+id/tvValue"
                    android:layout_toEndOf="@+id/tvValue" />

                <TextView
                    android:id="@+id/tvValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Value:"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <Spinner
                android:id="@+id/spOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnInsert"
                style="@style/ModernButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Insert" />
        </LinearLayout>
    </ScrollView>
</layout>
