<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:form_item="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="expense"
            type="rhcloud.com.financialcontrol.javabean.Expense" />

        <variable
            name="state"
            type="android.databinding.ObservableBoolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <rhcloud.com.droidutils.tabutil.tabutil.view.FormItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                form_item:tvTitle="Id:"
                form_item:anwserText='@{""+expense.idExpense}'
                android:enabled="false"
                />

            <EditText
                android:padding="20dp"
                android:hint="Description: "
                android:text='@={expense.description}'
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvDescription"
                android:enabled="@{state.get()}"/>

            <EditText
                android:padding="20dp"
                android:hint="Value:"
                android:text='@={expense.value}'
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvValue"
                android:enabled="@{state.get()}"/>

            <Spinner
                android:id="@+id/spOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{state.get()}"/>

            <Button
                android:background="@drawable/modern_button_state"
                android:text="Edit"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnEdit"
                android:visibility="@{state.get() ? View.GONE : View.VISIBLE}"/>

            <Button
                android:background="@drawable/modern_button_state"
                android:text="Save"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSave"
                android:visibility="@{state.get() ? View.VISIBLE : View.GONE}"/>


            <Button
                android:background="@drawable/modern_button_state"
                android:text="Delete"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnDelete"
                android:visibility="@{state.get() ? View.GONE : View.VISIBLE}"/>

        </LinearLayout>
    </ScrollView>
</layout>